Search indexation. Analytics. Open side nav overflow fix.

--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -152,10 +152,14 @@ img {
 }
 
 /* HEADER  */
+.header-lines {
+    background: @thirdColor;
+}
+
 .line {
     float: left;
     height: 5px;
-    width: 33.33%;
+    width: 33.3333334%;
 }
 
 .hello-line {
@@ -416,6 +420,10 @@ footer {
 
     .mobile-menu-button {
         display: block;
+    }
+
+    .overflow-prevent {
+        overflow: hidden;
     }
 
     .mobile-menu-open {
